@@ -638,7 +638,7 @@ static void op_add(user_interaction & dialog, database *dat, const string &arg, 
 	dat->add_archive(*arch, chemin, b, database_add_options());
 	thr.check_self_cancellation();
 	if(info_details)
-	    dialog.warning(gettext("Checking date ordering of files between archive..."));
+	    dialog.warning(gettext("Checking date ordering of files between archives..."));
 	date_order_problem = dat->check_order(dialog);
 	thr.check_self_cancellation();
 
@@ -833,7 +833,7 @@ static void op_move(user_interaction & dialog, database *dat, S_I src, archive_n
     dat->set_permutation(src, dst);
     thr.check_self_cancellation();
     if(info_details)
-	dialog.warning(gettext("Checking date ordering of files between archive..."));
+	dialog.warning(gettext("Checking date ordering of files between archives..."));
     date_order_problem = dat->check_order(dialog);
     thr.check_self_cancellation();
     if(date_order_problem)
@@ -1072,7 +1072,7 @@ static void op_interactive(user_interaction & dialog, database *dat, string base
 		    dialog.warning(gettext("Updating database with catalogue..."));
 		    dat->add_archive(*arch, input, input2, database_add_options());
 		    thr.check_self_cancellation();
-		    dialog.warning(gettext("Checking date ordering of files between archive..."));
+		    dialog.warning(gettext("Checking date ordering of files between archives..."));
 		    (void)dat->check_order(dialog);
 		}
 		catch(...)
@@ -1102,7 +1102,7 @@ static void op_interactive(user_interaction & dialog, database *dat, string base
 		num2 = tools_str2int(input);
 		dat->set_permutation(num, num2);
 		thr.check_self_cancellation();
-		dialog.warning(gettext("Checking date ordering of files between archive..."));
+		dialog.warning(gettext("Checking date ordering of files between archives..."));
 		dat->check_order(dialog);
 		saved = false;
 		break;
@@ -1196,7 +1196,7 @@ static void op_check(user_interaction & dialog, const database *dat, bool info_d
 	throw SRC_BUG;
 
     if(info_details)
-	dialog.warning(gettext("Checking date ordering of files between archive..."));
+	dialog.warning(gettext("Checking date ordering of files between archives..."));
     if(!dat->check_order(dialog))
 	throw Edata(gettext("Some files do not follow chronological order when archive index increases withing the database, this can lead dar_manager to restored a wrong version of these files"));
     else
