@@ -3,6 +3,8 @@ from 2.4.19 to 2.4.20
   options for dar that does not exist for dar_manager (like -R option)
 - reactivating disabled (by mistake) optimizations for some read-only dar
   manager database operations
+- fixing compilation issue with dar against gcc 4.9.2
+- fixing syntax error in dar_manager message
 
 from 2.4.18 to 2.4.19
 - fixed missing quote in dar_par.dcf which is called by the par2 directive
